--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "version": "0.1.0",
   "devDependencies": {
     "webpack-dev-server": "^4.9.2"
+  },
+  "engines" : {
+    "node": "v14.19.2"
   }
 }
