--- a/config/database.yml
+++ b/config/database.yml
@@ -19,14 +19,14 @@ default: &default
 
 development:
   <<: *default
-  database: hitojiten_development
+  database: topic_stocker_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: hitojiten_test
+  database: topic_stocker_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -49,6 +49,6 @@ test:
 #
 production:
   <<: *default
-  database: hitojiten_production
-  username: hitojiten
-  password: <%= ENV['HITOJITEN_DATABASE_PASSWORD'] %>
+  database: topic_stocker_production
+  username: topic_stocker
+  password: <%= ENV['topic_stocker_DATABASE_PASSWORD'] %>
