--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hitojiten",
+  "name": "topic_stocker",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.1.1",
@@ -11,6 +11,7 @@
   },
   "version": "0.1.0",
   "devDependencies": {
+    "@webpack-cli/serve": "^1.7.0",
     "webpack-dev-server": "^4.9.2"
   },
   "engines": {
