--- a/config/database.yml
+++ b/config/database.yml
@@ -48,21 +48,21 @@ test:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
 
-production: #EC2MySQL
-  <<: *default
-  database: topic_stocker_production
-  username: root
-  password: <%= ENV['DATABASE_PASSWORD'] %>
-  socket: /var/lib/mysql/mysql.sock
+# production: #EC2MySQL
+#   <<: *default
+#   database: topic_stocker_production
+#   username: root
+#   password: <%= ENV['DATABASE_PASSWORD'] %>
+#   socket: /var/lib/mysql/mysql.sock
 
-# production: #EC2RDS
-#   database: topicstocker-prod-rds
-#   adapter: mysql2
-#   encoding: utf8mb4
-#   charset: utf8mb4
-#   collation: utf8mb4_general_ci
-#   username: <%= Rails.application.credentials.db[:user_name] %>
-#   password: <%= Rails.application.credentials.db[:password] %>
-#   host: <%= Rails.application.credentials.db[:endpoint] %>
-#   pool: 20
-#   timeout: 1000
+production: #EC2RDS
+  database: topicstocker-prod-rds
+  adapter: mysql2
+  encoding: utf8mb4
+  charset: utf8mb4
+  collation: utf8mb4_general_ci
+  username: <%= Rails.application.credentials.db[:user_name] %>
+  password: <%= Rails.application.credentials.db[:password] %>
+  host: <%= Rails.application.credentials.db[:endpoint] %>
+  pool: 20
+  timeout: 1000
