--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,7 @@
 /public/assets
 .byebug_history
 
-/readme-info/
+/gitignore/
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
